feat: add production notification system
